Hecho modulo HTML CSS

--- a/uf1841/index.html
+++ b/uf1841/index.html
@@ -3,26 +3,27 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <h1>Algunas alertas informativas</h1>
     <div class="danger">
-        <p>¡Cuidado! La Web parece peligrosa. Visita este enlace para más información</p>
+        <p><strong>¡Cuidado!</strong> La Web parece peligrosa. Visita <a href="https://support.google.com/faqs/answer/2952493?hl=es" target="_blank">este enlace</a> para más información</p>
     </div>
 
     <div class="success">
-        <p>¡Bravo! Todo ha ido bien</p>
+        <p><strong>¡Bravo!</strong> Todo ha ido bien</p>
     </div>
 
     <div class="info">
-        <p>¡Más Info! Lee a continuación</p>
+        <p><strong>¡Más Info!</strong> Lee a continuación</p>
     </div>
 
     <div class="warning">
-        <p>¡Cuidado! Te estás quedando sin espacio en el disco...</p>
-        <!-- <img style="width: 25px;" src="warning.svg" alt=""> -->
+        <p><strong>¡Cuidado!</strong> Te estás quedando sin espacio en el disco...</p>
+        <img style="width: 25px;" src="warning.svg" alt="">
     </div>
 
 </body>
